fixed error in sigma prior - thanks Michael!

--- a/Labs/JAGSPrimer/JAGSPrimer.tex
+++ b/Labs/JAGSPrimer/JAGSPrimer.tex
@@ -323,7 +323,7 @@ model{
   # priors
   K ~ dunif(0, 4000)
   r ~ dunif (0, 2)
-  sigma ~ dunif(0, .5) 
+  sigma ~ dunif(0, 100) 
   tau <- 1/sigma^2
   # likelihood
   for(i in 1:n){
@@ -346,9 +346,9 @@ library(rjags)
 Logistic  = Logistic[order(Logistic$PopulationSize),]
 
 inits = list(
-  list(K = 1500, r = .2, sigma = .01),
-  list(K = 1000, r = .15, sigma = .5),
-  list(K = 900, r = .3, sigma = .01))
+  list(K = 1500, r = .2, sigma = 1),
+  list(K = 1000, r = .15, sigma = 5),
+  list(K = 900, r = .3, sigma = 10))
 
 data = list(
   n = nrow(Logistic),
@@ -381,9 +381,9 @@ inits = list(K = 1500, r = .5, tau = 2500) # WRONG
 
 \begin{Verbatim}
 inits = list(
-  list(K = 1500, r = .2, sigma = .01),
-  list(K = 1000, r = .15, sigma = .5),
-  list(K = 900, r = .3, sigma = .01))
+  list(K = 1500, r = .2, sigma = 1),
+  list(K = 1000, r = .15, sigma = 5),
+  list(K = 900, r = .3, sigma = 10))
 \end{Verbatim}
 
 \noindent Now it is really easy to see why we need the \enquote{list of lists\index{list of lists}} format -- there is one list for each chain; but remember, you require the same structure for a single chain, that is, a list of lists.
@@ -436,7 +436,7 @@ model{
   # priors
   K ~ dunif(0, 4000)
   r ~ dunif (0, 2)
-  sigma ~ dunif(0, .5) 
+  sigma ~ dunif(0, 100) 
   tau <- 1 / sigma^2
   # likelihood
   for(i in 1:n){
@@ -475,7 +475,7 @@ initFunc <- function (){
 return(list(
   K = runif(1, 10, 2000),
   r = runif(1, .1, 2),
-  sigma = runif(1, .01, 1))}
+  sigma = runif(1, 1, 80))}
 \end{Verbatim}
 
 \noindent We will use this function to automatically provide a different set initial values to each chain in our JAGS model.
@@ -515,7 +515,7 @@ initFunc <- function (){
 return(list(
   K = runif(1, 10, 2000),
   r = runif(1, .1, 2),
-  sigma = runif(1, .01, 1)))}
+  sigma = runif(1, 1, 80)))}
 
 # run JAGS model in parallel
 library(parallel)
