--- a/Labs/JAGSPrimer/JAGSPrimerAnswers.Rmd
+++ b/Labs/JAGSPrimer/JAGSPrimerAnswers.Rmd
@@ -126,7 +126,7 @@ model{
   # priors
   K ~ dunif(0, 4000)
   r ~ dunif (0, 2)
-  sigma ~ dunif(0, .5) 
+  sigma ~ dunif(0, 100) 
   tau <- 1/sigma^2
   
   # likelihood
@@ -152,9 +152,9 @@ set.seed(1)
 Logistic <- Logistic[order(Logistic$PopulationSize),]
 
 inits = list(
-  list(K = 1500, r = .2, sigma = .01),
-  list(K = 1000, r = .15, sigma = .5),
-  list(K = 900, r = .3, sigma = .01))
+  list(K = 1500, r = .2, sigma = 1),
+  list(K = 1000, r = .15, sigma = 5),
+  list(K = 900, r = .3, sigma = 10))
 
 data = list(
   n = nrow(Logistic),
@@ -183,7 +183,7 @@ initFunc <- function (){
 return(list(
   K = runif(1, 10, 2000),
   r = runif(1, .1, 1.6),
-  sigma = runif(1, .01, .5)))}
+  sigma = runif(1, 1, 80)))}
 
 initFunc()
 initFunc()
