--- a/Labs/JAGSPrimer/JAGSPrimer.tex
+++ b/Labs/JAGSPrimer/JAGSPrimer.tex
@@ -430,7 +430,7 @@ Finally, \texttt{n.iter = n.iter} says we want 10,000 iterations in each chain a
 \begin{algorithm}
 \begin{Verbatim}[frame=single]
 { # Extra bracket needed only for R markdown files - see answers
-sink("logisticJAGS.R") # This is the file name for the jags code
+sink("LogisticJAGS.R") # This is the file name for the jags code
 cat("
 model{
   # priors
