multiple typos fixed

--- a/Labs/MultiLevelModels/MultilevelModelBuilding.tex
+++ b/Labs/MultiLevelModels/MultilevelModelBuilding.tex
@@ -24,7 +24,7 @@
 
 % Custom commands
 \newif\ifanswers
-% \answerstrue % comment out to hide answers
+ \answerstrue % comment out to hide answers
 
 \begin{document}
 \maketitle
@@ -48,7 +48,7 @@ This lab exercise has two parts---a model \emph{building} exercise and a model \
 
 Ecological data are often collected at multiple scales or levels of organization in nested designs. ``Group'' is a catchall term for the upper level in many different types of nested hierarchies. Groups could logically be composed of populations, locations, species, treatments, life stages, and individual studies, or really, any sensible category. We have measurements within groups on individual organisms, plots, species, time periods, and so on. We may also have measurements on the groups themselves, that is covariates that apply at the upper level of organization or spatial scale or the category that contains the measurements. Multilevel models represent the way that a quantity of interest responds to the combined influence of observations taken at the group level and within the group. 
 
-Nitrous oxide, a greenhouse gas roughly 300 times more potent than carbon dioxide in forcing atmospheric warming, is emitted when synthetic nitrogenous fertilizers are added to soils. Qian and colleagues (2010) conducted a Bayesian meta-analysis of such additions (gN $\cdot$ ha\textsuperscript{-1}$\cdot$ d\textsuperscript{-1}) using data from a study conducted by Carey (2007), who reviewed 164 relevant studies. Studies occurred at different locations, forming a group-level hierarchy\footnote{We will use only sites that have both nitrogen and carbon data, which reduces the number of sites to 107 in the analysis here.}. Soil carbon content (g $\cdot$ C $\cdot$ g\textsuperscript{-1}organic matter) was measured as a group-level covariate and is assumed to be measured without error. Observations of $N\textsubscript{2}O$ emission is also assumed to be measured without error and were paired with measurements of fertilizer addition (kgN$\cdot$ ha\textsuperscript{-1}). The effect of different types of fertilizer was also studied. 
+Nitrous oxide, a greenhouse gas roughly 300 times more potent than carbon dioxide in forcing atmospheric warming, is emitted when synthetic nitrogenous fertilizers are added to soils. Qian and colleagues (2010) conducted a Bayesian meta-analysis of such additions (gN $\cdot$ ha\textsuperscript{-1}$\cdot$ d\textsuperscript{-1}) using data from a study conducted by Carey (2007), who reviewed 164 relevant studies. Studies occurred at different locations, forming a group-level hierarchy\footnote{We will use only sites that have both nitrogen and carbon data, which reduces the number of sites to 107 in the analysis here.}. Soil carbon content (g $\cdot$ organic C $\cdot$ g\textsuperscript{-1} soil dry matter) was measured as a group-level covariate and is assumed to be measured without error. Observations of $N\textsubscript{2}O$ emission is also assumed to be measured without error and were paired with measurements of fertilizer addition (kgN$\cdot$ ha\textsuperscript{-1}). The effect of different types of fertilizer was also studied. 
 
 \begin{enumerate} [leftmargin=*] 
 \item Begin by ignoring the data on soil carbon, site, and fertilizer type. Draw a Bayesian network and write out the posterior and joint distribution for a linear regression model of $N\textsubscript{2}O$ emission on fertilizer addition for a single observation. Use a linearized power function for your deterministic model of emissions. For now, you may use the generic $[\,]$ so that you do not need to write specific distributions. Use $\sigma^{2}$ to represent the uncertainty in your model realizing, of course, that you might need moment matching when you choose a specific distribution.
