minor typo in q2 - thanks kyle!

--- a/Labs/ModelBuilding/ModelBuilding.tex
+++ b/Labs/ModelBuilding/ModelBuilding.tex
@@ -23,7 +23,7 @@
 
 % Custom commands
 \newif\ifanswers
-\answerstrue % comment out to hide answers
+%\answerstrue % comment out to hide answers
 
 \begin{document}
 \maketitle
@@ -80,7 +80,7 @@ It follows that learning to write proper mathematical and statistical expression
 \newpage
 \fi
 
-\item You have data on the relationship between incidence of lung cancer in households (1 if cancer is present and 0 if no cancer) and radon levels in the house for 1000 houses in 40 counties within a state. You also have data on the clay soil content at the county level, which you heroically assume is know without error. How would you model the effect of radon and soil type on the probability of lung cancer?
+\item You have data on the relationship between incidence of lung cancer in households (1 if cancer is present and 0 if no cancer) and radon levels in the house for 1000 houses in 40 counties within a state. You also have data on the clay soil content at the county level. You heroically assume both clay content and radon are know without error. How would you model the effect of radon and soil type on the probability of lung cancer?
 
 \ifanswers
 \newpage
