Seedling typo fix Thanks Grace

--- a/Labs/ModelBuilding/ModelBuilding.tex
+++ b/Labs/ModelBuilding/ModelBuilding.tex
@@ -23,7 +23,7 @@
 
 % Custom commands
 \newif\ifanswers
-%\answerstrue % comment out to hide answers
+\answerstrue % comment out to hide answers
 
 \begin{document}
 \maketitle
@@ -137,7 +137,7 @@ where $R$ is the the total number of species across all plots (this comes from t
 \newpage
 \fi
 
-\item You have data on the number of willow seedings that establish on 100 different 10 $\times$ 10 meter plots. Assume these data are measured perfectly (i.e., you did not over or under count seedlings). You also have 5 measurements of soil water and 1 measurement of percent cover (estimated visually) on each plot.  How would you model the effect of soil water and percent bare soil on the number of plants established? You also have paired data of visually estimated cover and actual cover on 15 calibration plots (separate from the 100 plots with seedling and soil water data), where the actual proportion of vegetated soil was laboriously measured using 1 $\times$ 1 meter gridded quadrats.  How would you incorporate uncertainty in the percent cover and soil water covariates in your analysis?
+\item You have data on the number of willow seedlings that establish on 100 different 10 $\times$ 10 meter plots. Assume these data are measured perfectly (i.e., you did not over or under count seedlings). You also have 5 measurements of soil water and 1 measurement of percent cover (estimated visually) on each plot.  How would you model the effect of soil water and percent bare soil on the number of plants established? You also have paired data of visually estimated cover and actual cover on 15 calibration plots (separate from the 100 plots with seedling and soil water data), where the actual proportion of vegetated soil was laboriously measured using 1 $\times$ 1 meter gridded quadrats.  How would you incorporate uncertainty in the percent cover and soil water covariates in your analysis?
 
 \item Now presume that the 100 plots are arranged in 5 different stream reaches.  You have data on peak runoff in each of the reaches, which you may assume is measured perfectly. You want to understand variation at the catchment scale created by peak runoff.  How would you include these data in the model you developed in problem 4?
 
