Changes to problem 1 and remove n from #2 thanks Kyle

--- a/Labs/ModelBuilding/ModelBuilding.tex
+++ b/Labs/ModelBuilding/ModelBuilding.tex
@@ -59,7 +59,7 @@ It follows that learning to write proper mathematical and statistical expression
 \end{figure}
 \begin{align*}
 \big[ \bm{z}, \bm{w}, \alpha, \bm{\beta}, \sigma_{p} \mid \bm{y}, \bm{x} \big] \varpropto & \prod^{n}_{i=1} \big[z_{i} \mid g\big( \alpha, \bm{\beta}, w_{i} \big), \sigma^{2}_{p} \big] \big[x_{i} \mid w_{i}, sd^{2}_{x,i} \big] \big[y_{i} \mid z_{i}, sd_{y,i} \big] \\
-& \times \big[ w_{i} \big] \big[ \alpha \big] \big[ \beta_{0} \big] \big[ \beta_{1} \big] \big[ \sigma_{p} \big] 
+& \times \big[ w_{i} \big] \big[ \alpha \big] \big[ \beta_{1} \big] \big[ \beta_{2} \big] \big[ \sigma_{p} \big] 
 \end{align*}
 \begin{equation*}
 \begin{aligned}[c]
@@ -121,7 +121,7 @@ It follows that learning to write proper mathematical and statistical expression
 \end{center}
 \end{figure}
 \begin{align*}
-\big[\bm{\phi} \mid \mathbf{Y}, \bm{n} \big] \varpropto \prod_{j=1}^{J} \big[\bm{y}_{j} \mid n_{j}, \bm{\phi} \big] \big[\bm{\phi}\big]
+\big[\boldsymbol{\phi} \mid \mathbf{Y} \big] \varpropto \prod_{j=1}^{J} \big[\bm{y}_{j} \mid n_{j}, \bm{\phi} \big] \big[\bm{\phi}\big]
 \end{align*}
 \begin{equation*}
 \begin{aligned}[c]
