--- a/Labs/SwissBirds/SwissBirdsOccupancyModeling.Rmd
+++ b/Labs/SwissBirds/SwissBirdsOccupancyModeling.Rmd
@@ -1,10 +1,10 @@
 <style>
 
 /* uncomment out this to generate exercise */
-/* .hider {display: none;} */
+ .hider {display: none;} */
 
 /* uncomment out this to generate key */
-  .hider {display: inline;}
+/*  .hider {display: inline;}
 
 </style>
 
@@ -34,10 +34,10 @@ library(knitr)
 knitr::opts_chunk$set(cache = FALSE, warnings = FALSE, tidy = FALSE)
 
 # uncomment out this to generate key
- nokey = FALSE; key = TRUE
+# nokey = FALSE; key = TRUE
 
 # uncomment out this to generate exercise
-# nokey = TRUE; key = FALSE
+ nokey = TRUE; key = FALSE
 ```
 
 <br>
@@ -52,7 +52,7 @@ Modeling presence or absence is a classic problem involving mixture models, spec
 
 A fundamental question in landscape ecology seeks to understand how landscape structure shapes variation in the abundance of species. We will use data from the Swiss Survey of Common Breeding Birds, courtesy of Royle and Dorazio (2008), to model habitat occupancy by a common, resident bird in the Swiss Alps, the willow tit (*Parus montanus*). The data come from annual surveys of one km^2^ quadrats distributed across Switzerland (Fig. 1). Surveys are conducted during the breeding season on three separate days, but some quadrats have missing data so that the number of replicate observations is fewer than three. 
 
-During each survey, an observer records every visual or acoustic detection of a breeding species and marks its location using a global positioning system or, in earlier years, a paper map. Because we are observing a resident species during the breeding season, we assume that the true state (occupied or unoccupied) does not change among sample dates, an assumption known as closure. 
+During each survey, an observer records every visual or acoustic detection of a breeding species (we do not differentiate between these two types of detections in this problem) and marks its location using a global positioning system or, in earlier years, a paper map. Because we are observing a resident species during the breeding season, we assume that the true state (occupied or unoccupied) does not change among sample dates, an assumption known as closure. 
 
 <img src="WillowTit.png" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
 <img src="MHBMap.jpg" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
