--- a/Labs/MetaAnalysis/538ElectionPoll.tex
+++ b/Labs/MetaAnalysis/538ElectionPoll.tex
@@ -30,7 +30,7 @@
 
 % Custom commands
 \newif\ifanswers
-%\answerstrue % comment out to hide answers
+\answerstrue % comment out to hide answers
 
 \begin{document}
 \maketitle
@@ -55,7 +55,7 @@ Nate Silver, who used Bayesian models to accurately predict Barack Obama's 2008 
 \begin{center}
 \includegraphics[scale=.4]{DAG}
 \end{center}
-\noindent where $y$ is the number of votes for Hillary Clinton, in the $j^{th}$ poll, in week $t$, in the $i^{th}$ state
+\noindent where $y$ is the number of votes for Hillary Clinton, in the $j^{th}$ poll, in week $t$, in the $i^{th}$ state.
 \begin{eqnarray*}
 \big[\boldsymbol{\alpha},\boldsymbol{\beta}, \mathbf{p} \mid \mathbf{y}\big] \propto & \prod_{i=1}^{51}\prod_{j=1}^{N_{j}}\prod_{t=1}^{T} \big[y_{ijt} \mid p_{ijt}\big]\big[p_{ijt} \mid \alpha_{it},\beta_{it}\big]
 \big[\alpha_{it}\big]\big[\beta_{it}\big]
