meta analysis lab clarification

--- a/Labs/MetaAnalysis/538ElectionPoll.tex
+++ b/Labs/MetaAnalysis/538ElectionPoll.tex
@@ -30,7 +30,7 @@
 
 % Custom commands
 \newif\ifanswers
-\answerstrue % comment out to hide answers
+% \answerstrue % comment out to hide answers
 
 \begin{document}
 \maketitle
@@ -62,7 +62,7 @@ Nate Silver, who used Bayesian models to accurately predict Barack Obama's 2008 
 \end{eqnarray*}
 \fi 
 
-\item How would you decide who wins each state? Who wins the national vote? Remember candidates must accumulate 270 of 538 state-level electoral votes to win the election.
+\item How would you decide who wins each state? Who wins the national vote? Remember candidates must accumulate 270 of 538 state-level electoral votes to win the election. To get started with this question, consider taking draws from a derived quantity from your model, remembering that we are interested in expressing state and national results as random variables.  Essentially, we want you to recreate the posterior distributions shown in the earlier figure. 
 
 \ifanswers
 \begin{center}
