fixed subscript omission

--- a/Labs/MetaAnalysis/538ElectionPoll.tex
+++ b/Labs/MetaAnalysis/538ElectionPoll.tex
@@ -74,7 +74,7 @@ $V_{it} = \textrm{binomial}\big(N_{it}, \phi_{it}\big)$
 
 where $N_{it}$ is the number of likely voters in the $i^{th}$ state and the $t^{th}$ week.
 
-if $V_{it} > \frac{N}{2}$ then $Z_{it}=1$ else $Z_{it}=0$
+if $V_{it} > \cfrac{N_{it}}{2}$ then $Z_{it}=1$ else $Z_{it}=0$
 
 $E_{t} = Z_{it} \times$ the number of electoral votes $= \Sigma_{i=1}^{51} E_{it}$
 
