--- a/Labs/MetaAnalysis/538ElectionPoll.tex
+++ b/Labs/MetaAnalysis/538ElectionPoll.tex
@@ -30,7 +30,7 @@
 
 % Custom commands
 \newif\ifanswers
-% \answerstrue % comment out to hide answers
+ \answerstrue % comment out to hide answers
 
 \begin{document}
 \maketitle
